# biokb_chebi

./: .gitignore  .readthedocs.yaml  Dockerfile  README.md  docker-compose-test.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: pypi-publish.yml
docs/: api.md  biokb_chebi_er_model.mwb  cli.md  config.ini  data_model.md  how_to_run_neo4j.md  index.md  installation.md  mysql_create_tables.sql  query_examples.ipynb  run_the_pipeline.md
notebooks/: README.md  create_er_model.ipynb  erdiagram.ipynb  example.ipynb  example_with_test_data.ipynb  import_all_at_once.ipynb  import_ttls.ipynb  import_ttls_from_url.ipynb  test.ipynb  test_query.ipynb  test_surechembl.ipynb  test_workflow.ipynb  test_workflow_podman.ipynb
src/biokb_chebi/: __init__.py  cli.py  constants.py  crud.py  manager.py  neo4j_importer.py  py.typed
src/biokb_chebi/api/: main.py  query_tools.py  schemas.py  tags.py
src/biokb_chebi/constants/: basic.py  chebi.py
src/biokb_chebi/db/: importer.py  manager.py  models.py
src/biokb_chebi/rdf/: namespaces.py  neo4j_importer.py  turtle.py
tests/: __test_api.py  conftest.py  docker_compose_defaults.py  test_api.py  test_chebi.py  test_neo4j_import.py  test_software.py
tests/data/: chebiId_inchi.tsv  chemical_data.tsv  config-tests.ini  database_accession.tsv  relation.tsv  test.ipynb
tests/dummy_data/: chebiId_inchi.tsv  chemical_data.tsv  comments.tsv  database_accession.tsv  relation.tsv
tests/dummy_data/unzipped/: compounds.tsv  names.tsv  reference.tsv
