[project]
name = "biokb_chebi"
version = "0.1.0-dev"
description = "A Python package to import ChEBI data in MySQL and Neo4J"
authors = [
    {name = "Christian Ebeling", email = "christian.ebeling@scai.fraunhofer.de"},
]
dependencies = [
    "sqlalchemy>=2.0.30",
    "pymysql>=1.1.0",
    "pandas>=2.2.2",
    "rdflib-neo4j>=1.0",
    "cryptography>=42.0.7",
    "click>=8.1.7",
    "tqdm>=4.66.4",
    "fastapi[standard]>=0.115.14",
    "rdkit>=2025.3.3",
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: MIT License"
]
keywords = ["knowledge graph", "knowledge base", "biochemistry", "bioinformatics", "ChEBI"]
urls = { Homepage = "https://github.com/SCAI-BIO/biokb_chebi" }
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.2.0",
    "tox>=4.15.0",
    "black>=24.4.2",
    "pytest-cov>=5.0.0",
    "pandas-stubs>=2.2.2.240514",
    "types-tqdm>=4.66.0.20240417",
]

[tool.mypy]
strict = true

[dependency-groups]
docs = [
    "eralchemy>=1.5.0",
    "graphviz>=0.21",
]

[project.scripts]
biokb_chebi = "biokb_chebi.cli:main"


